--- a/index.html
+++ b/index.html
@@ -108,58 +108,21 @@
     
     <!-- Tienda -->
 
-    <section class="tienda">
-        <div class="producto">
-            <p class="nombre_producto">KIT ESENCIAL</p>
-            <img src="" alt="imagen del kit">
-            <p class="precio_producto"><span class="tachado">$4999</span>$2499</p>
-            <ul>
-                <li>Partes cableadas e inalambricas</li>
-                <li>Manejo total desde nuestra APP</li>
-                <li>Ideal para Hogares y Comercios</li>
-                <li>Posibilidad de integrar Camaras</li>
-                <li>Teclado cableado</li>
-                <li>Posibilidad de agregar control remoto</li>
-            </ul>
-            <a href="#" class="btn">
-                <button>CONTRATAR</button>
-            </a>
+    <div class="contenedor">
+        <div class="tienda">
+            <div class="producto">
+                <img src="" alt="">
+                <h6>ALARMAS</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nihil assumenda quam illum consectetur laudantium cupiditate rerum. </p>
+                <ul>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Lorem ipsum dolor sit</li>
+                </ul>
+            </div>
         </div>
-
-        <div class="producto">
-            <p class="nombre_producto">KIT PRO</p>
-            <img src="" alt="imagen del kit">
-            <p class="precio_producto"><span class="tachado">$4999</span>$2499</p>
-            <ul>
-                <li>Partes cableadas e inalambricas</li>
-                <li>Manejo total desde nuestra APP</li>
-                <li>Ideal para Hogares y Comercios</li>
-                <li>Posibilidad de integrar Camaras</li>
-                <li>Teclado cableado</li>
-                <li>Posibilidad de agregar control remoto</li>
-            </ul>
-            <a href="#" class="btn">
-                <button>CONTRATAR</button>
-            </a>
-        </div>
-
-        <div class="producto">
-            <p class="nombre_producto">KIT PERSONALIZADO</p>
-            <img src="" alt="imagen del kit">
-            <p class="precio_producto"><span class="tachado">$4999</span>$2499</p>
-            <ul>
-                <li>Partes cableadas e inalambricas</li>
-                <li>Manejo total desde nuestra APP</li>
-                <li>Ideal para Hogares y Comercios</li>
-                <li>Posibilidad de integrar Camaras</li>
-                <li>Teclado cableado</li>
-                <li>Posibilidad de agregar control remoto</li>
-            </ul>
-            <a href="#" class="btn">
-                <button>CONTRATAR</button>
-            </a>
-        </div>
-    </section>
+    </div>
 
     <!--Aplicacion
 
