--- a/contacto.html
+++ b/contacto.html
@@ -17,11 +17,11 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="#">MONITOREO</a></li>
                 <li><a href="#">SOLUCIONES</a></li>
                 <li><a href="#">NOSOTROS</a></li>
-                <li><a href="#">SOPORTE</a></li>
+                <li><a href="contacto.html">SOPORTE</a></li>
             </ul>
         </nav>
         <a href="#" class="btn">
@@ -40,16 +40,16 @@
                 <div class="mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.071858387351!2d-64.19452294837538!3d-31.41214620488258!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432987fd488df5f%3A0x3344a12608cf0220!2sJusto%20Jos%C3%A9%20de%20Urquiza%2064%2C%20X5000KPB%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1662490880349!5m2!1ses-419!2sar" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <p>Urquiza 64 | 4to Piso | Oficina B | Cordoba Capital </p>
-                <p>ventas1@berardost.com.ar</p>
-                <p>+54 9 351 3428585</p>
+                <p class="inf">Urquiza 64 | 4to Piso | Oficina B | Cordoba Capital </p>
+                <p class="inf">ventas1@berardost.com.ar</p>
+                <p class="inf">+54 9 351 3428585</p>
             </div>
             
             <div class="form">
                 
 
                 <div class="formulario_contacto">
-                    <p>Envianos tu consulta</p>
+                    <p class="consulta">Envianos tu consulta</p>
                     <form action="">
                         <input class="nom" type="text" name="nombre" id="nombre" placeholder="Ingrese su Nombre">
                         <input type="email" name="email" id="email" placeholder="Ingrese su Email">
